# gltch_agent

./: .env.example  .gitignore  .npmignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  Dockerfile.gateway  LICENSE  README.md  SKILL.md  docker-compose.yml  gltch.py  knowledge_graph.json  learned_patterns.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_results.txt  test_results2.txt  test_wallet.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
agent/: __init__.py
agent/audio/: __init__.py  talk_mode.py  tts.py  voice_wake.py
agent/automation/: __init__.py  background.py  cron.py  skills.py  webhooks.py
agent/config/: __init__.py  defaults.py  settings.py
agent/core/: __init__.py  agent.py  llm.py
agent/gamification/: __init__.py  ranks.py  unlocks.py  xp.py
agent/integrations/: __init__.py  base.py  discord_integration.py  github_integration.py
agent/memory/: __init__.py  knowledge.py  knowledge_graph.py  learner.py  sessions.py  store.py
agent/rpc/: __init__.py  (+1 more)
cli/: package.json
docs/: getting-started.md  index.md
gateway/: package-lock.json  package.json
glitch_agent/: .gitignore  CONTRIBUTING.md  README.md  commands.py  config.py  emotions.py  gamification.py  gltch.py  input.py  llm.py  memory.py  systemprompt.md  tools.py
heartbeats/: _example.yaml  moltbook.yaml  rentahuman.yaml
public/: index.html  script.js  styles.css
scripts/: install.ps1  install.sh
tests/: conftest.py  test_agent_core.py  test_background.py  test_heartbeat.py  test_knowledge_graph.py  test_learner.py  test_security.py
ui/: glitch_agent_workspace.code-workspace  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+104 files in other folders)
