[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gltch"
version = "0.2.0"
description = "GLTCH - Local-first, command-driven operator agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GLTCH Team" }
]
keywords = [
    "ai",
    "agent",
    "llm",
    "local-first",
    "terminal",
    "hacker",
    "cyberpunk"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gltch = "gltch:main"
gltch-rpc = "agent.rpc.server:main"

[project.urls]
Homepage = "https://github.com/your-org/glitch_agent"
Documentation = "https://docs.gltch.dev"
Repository = "https://github.com/your-org/glitch_agent"
Issues = "https://github.com/your-org/glitch_agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent", "gltch.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
